# hyou

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  Makefile  README.md  poetry.toml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
hyou/: __init__.py  api.py  collection.py  exception.py  spreadsheet.py  util.py  view.py  worksheet.py
hyou/schema/: sheets_v4.py
test/: api_test.py  collection_test.py  http_mocks.py  integration_test.py  spreadsheet_test.py  util_test.py  view_test.py  worksheet_test.py
test/creds/: example-bot.json  unittest-collection-write.json  unittest-collection.json  unittest-sheets.json
tools/: generate_oauth2_credentials.py
